--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Starter-front</title>
+  <title>Compostage : Le Villon</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://kit.fontawesome.com/6524c4f4ec.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <app-root></app-root>
