--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>Compostage : Le Villon</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta property="og:image" content="./assets/images/imgimmeuble.jpg" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://kit.fontawesome.com/6524c4f4ec.js" crossorigin="anonymous"></script>
 </head>
